# frink-embeddings-web

./: .gitignore  Dockerfile  Makefile  README.md  default.env  eval_queries.toml  gunicorn.conf.py  pyproject.toml
.agents/skills/textify/: SKILL.md
.github/workflows/: docker-publish.yml
helm/frink-embedding-ui/: Chart.yaml  values.yaml
helm/frink-embedding-ui/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  http-route.yaml  ingress.yaml  pvc.yaml  service.yaml
helm/frink-embedding-ui/templates/tests/: test-connection.yaml
src/frink_embeddings_web/: __init__.py  app.py  cli.py  context.py  eval.py  graphs.py  model.py  query.py  report.py  routes.py  settings.py
src/frink_embeddings_web/cli/: main.py
src/frink_embeddings_web/config/: __init__.py  context.py  settings.py
src/frink_embeddings_web/core/: errors.py  graphs.py  models.py  query.py
src/frink_embeddings_web/evaluation/: eval.py  metrics.py  report.py  sample.py
src/frink_embeddings_web/evaluation/templates/: eval_report.md
src/frink_embeddings_web/indexing/: cli.py  index.py  materialize.py  models.py  sample.py
src/frink_embeddings_web/static/: index.js  style.css
src/frink_embeddings_web/templates/: eval_report.md  index.html
src/frink_embeddings_web/templates/partials/: feature_row.html  results_table.html
src/frink_embeddings_web/web/: __init__.py  _flask.py  app.py  routes.py
src/frink_embeddings_web/web/static/: index.js  style.css
src/frink_embeddings_web/web/templates/: index.html
src/frink_embeddings_web/web/templates/partials/: results_table.html
tests/: test_materialize.py
tests/fixtures/: dedupe.ttl  embedding_text.ttl  sample_types.ttl  walk_graph.ttl
