[project]
name = "frink-embeddings-web"
version = "0.1.0"
description = "Frink Embeddings Web"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Patrick Golden", email = "ptgolden@email.unc.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.7.0",
    "torchvision==0.23.0",
]

[project.scripts]
frink-embeddings-web = "frink_embeddings_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/frink_embeddings_web"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff]
target-version = "py312"
line-length = 80
include = [
    "src/**/*.py",
]

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B",  # bugbear
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]

extend-ignore = [
    "S101",  # `assert`
]
unfixable = []
